--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/reactnative/index.js",
   "types": "dist/reactnative/index.d.ts",
   "scripts": {
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .ts,.tsx",
     "build": "sh scripts/build.sh",
     "clean": "sh scripts/clean.sh",
     "release": "sh scripts/publish-latest.sh",
@@ -48,8 +49,13 @@
     "@types/react": "16.4.7",
     "@types/react-native": "0.49.5",
     "@types/resize-observer-browser": "0.1.7",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
+    "eslint": "^9.3.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsdoc": "^48.2.7",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
     "file-directives": "1.4.6",
-    "tslint": "5.11.0",
     "typescript": "4.9.5"
   }
 }
